# imu-eskf

./: .gitignore  CMakeLists.txt  buf.gen.yaml  build.sh  clean.sh  deploy.sh  deploy_console.sh  readme.md
.zed/: settings.json
embedded/: .gitignore  platformio.ini
embedded/lib/Xsens_MTi_SPI_custom/: MTi_SPI_custom.cpp  MTi_SPI_custom.h  Xbus_SPI_custom.cpp  Xbus_SPI_custom.h  library.properties
embedded/lib/cbtimer/src/: CBTimer.cpp  CBTimer.h
embedded/lib/eskf_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  help.py  setup.sh
embedded/lib/eskf_lib/bind/: pyESKF.cpp
embedded/lib/eskf_lib/src/: Debias.cpp  Debias.h  EKSF.cpp  ESKF.cpp  ESKF.h  ESKF2.h  Prelude.h  Zbias.h
embedded/src/: P0.h  arduino_secrets.h  main.cpp  startup.cpp  startup.h
embedded/test/: test_math.cpp
eskf_lib/: readme.md
eskf_lib/src/: EKSF.cpp  ESKF.h  Watchdog.hpp
proto/: Packet.proto
protobuf/: FilterFrame.proto  buf.gen.yaml  buf.yaml  test.proto
scratchpads/: continuous_fx.jl  insanity_check.jl  precompute_q.jl
